kubernetes-networks/canary/02-web-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-prod-svc
  namespace: canary
spec:
  selector:
    app: web-prod
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
