kubernetes-networks/canary/03-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-prod
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: canary.example.com
    http:
      paths:
      - path: /web
        backend:
          serviceName: web-prod-svc
          servicePort: 8000
